bugfix add a back arrow to go back on the flipcard on mobile if stuck

--- a/app/lists/create-list/classes.module.scss
+++ b/app/lists/create-list/classes.module.scss
@@ -26,6 +26,7 @@
     }
     @media screen and (max-width: 500px) {
       padding: 10px 16px;
+      gap: 20px;
     }
     .subtitle {
       display: flex;
