--- a/src/components/Materials/CustomSelector/classes.module.scss
+++ b/src/components/Materials/CustomSelector/classes.module.scss
@@ -12,7 +12,7 @@
     @media screen and (max-width: 500px) {
       flex-direction: column;
       min-height: 250px;
-      gap: 0px;
+      gap: 12px;
     }
 
     .option {
@@ -27,11 +27,11 @@
       cursor: pointer;
       text-align: center;
       align-items: center;
-      gap: 15px;
+      //gap: 15px;
       padding: 0 15px;
 
       @media screen and (max-width: 500px) {
-        padding: 8px 0px;
+        padding: 0px;
         flex-direction: row;
       }
 
@@ -96,6 +96,17 @@
 
         .info-svg {
           display: flex;
+
+          svg {
+            width: 20px;
+          }
+        }
+        .back-svg-icon {
+          display: flex;
+
+          @media screen and (min-width: 500px) {
+            display: none;
+          }
           svg {
             width: 20px;
           }
